waitingroom/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: waitingroom
  labels:
    app: waitingroom
spec:
  replicas: 1
  selector:
    matchLabels:
      app: waitingroom
  template:
    metadata:
      labels:
        app: waitingroom
    spec:
      containers:
      - name: waitingroom
        image: localhost:5000/waitingroom:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "20m"
          limits:
            memory: "64Mi"
            cpu: "100m"
