waitingroom/service.yml
kind: Service
apiVersion: v1
metadata:
  name: waitingroom
spec:
  selector:
    app: waitingroom
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
